--- a/package.json
+++ b/package.json
@@ -14,10 +14,15 @@
     "@types/react-dom": "^17.0.8",
     "axios": "^0.21.1",
     "clsx": "^1.1.1",
+    "cors": "2.8.5",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
+    "express": "4.17.1",
     "express-session": "1.17.0",
+    "mongodb": "3.3.2",
+    "mongoose": "5.7.1",
     "node-sass": "5.0.0",
+    "nodemon": "1.19.1",
     "npm-run-all": "^4.1.5",
     "passport": "0.4.0",
     "passport-google-oauth20": "2.0.0",
