--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "enzyme-adapter-react-16": "^1.15.6",
     "express": "4.17.1",
     "express-session": "1.17.0",
+    "formidable": "^1.2.2",
     "mongodb": "3.3.2",
     "mongoose": "5.7.1",
     "node-sass": "5.0.0",
